# amazon-kinesis-video-streams-producer-embedded-c-fork

./: .gitignore  .gitmodules  CMakeLists.txt
CMake/: libaziotsharedutil.cmake  libembedded-media.cmake  libllhttp.cmake  libmbedtls.cmake  libparson.cmake  libtlsf.cmake
res/media/h264_annexb/: cframe.h  combined.h264  keyframe.h
samples/: CMakeLists.txt
samples/kvsapp/: kvsappcli.c  kvsappcli.h
src/: CMakeLists.txt
src/include/kvs/: iot_credential_provider.h  kvsapp.h  restapi.h  test_sigv4.h  zephyr_fixes.h
src/include/kvs/transport/: mbedtls_zephyr.h  sockets_zephyr.h
src/port/: port_zephyr.c
src/source/app/: kvsapp.c
src/source/codec/: nalu.c
src/source/misc/: json_helper.c
src/source/net/: http_helper.c  http_helper.h  netio.c
src/source/os/: allocator.c  pool_allocator.c  zephyr_fixes.c
src/source/restful/: aws_signer_v4.c  aws_signer_v4_zephyr.c
src/source/restful/iot/: iot_credential_provider.c
src/source/restful/kvs/: restapi_kvs.c
src/source/stream/: stream.c
src/source/transport/: mbedtls_zephyr.c  sockets_zephyr.c
